--- a/ch12-04-testing-the-librarys-functionality.html
+++ b/ch12-04-testing-the-librarys-functionality.html
@@ -232,7 +232,7 @@ Pick three.&quot;;
 </span></code></pre>
 <p><span class="caption">範例 12-15：建立一個我們預期 <code>search</code> 函式該有的行為的失敗測試</span></p>
 <p>此測試搜尋字串 <code>&quot;duct&quot;</code>。而要被搜尋的文字有三行，只有一行包含 <code>&quot;duct&quot;</code>。我們判定 <code>search</code> 函式回傳的數值只會包含我們預期的那一行。</p>
-<p>我們還無法執行此程式並觀察其失敗，因為測試還無法編譯，<code>search</code> 函式根本還不存在！所以現在我們要加上足夠的程式碼讓測試可以編譯並執行，而我們要加上的事 <code>search</code> 函式的定義並永遠回傳一個空的向量，如範例 12-16 所示。然後測試應該就能編譯並失敗，因為空向量並不符合包含 <code>&quot;safe, fast, productive.&quot;</code> 此行的向量。</p>
+<p>我們還無法執行此程式並觀察其失敗，因為測試還無法編譯，<code>search</code> 函式根本還不存在！所以現在我們要加上足夠的程式碼讓測試可以編譯並執行，而我們要加上的是 <code>search</code> 函式的定義並永遠回傳一個空的向量，如範例 12-16 所示。然後測試應該就能編譯並失敗，因為空向量並不符合包含 <code>&quot;safe, fast, productive.&quot;</code> 此行的向量。</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">use std::error::Error;
 </span><span class="boring">use std::fs;
