--- a/ch10-00-generics.html
+++ b/ch10-00-generics.html
@@ -265,8 +265,8 @@ fn main() {
 <li>將重複的程式碼提取置函式本體內，並指定函式簽名輸入與回傳數值。</li>
 <li>更新重複使用程式碼的實例，改呼叫我們定義的函式。</li>
 </ol>
-<p>接我們將以相同的步驟來使用泛型來減少重複的程式碼。就像函式本體可以抽象出 <code>list</code> 而不用特定數值，泛型允許程式碼執行抽象型別。</p>
-<p>舉例來說，假數我們有兩個函式：一個會找出 <code>i32</code> 型別切片中的最大值而另一個會找出 <code>char</code> 型別切片的最大值。我們要如何刪除重複的部分呢？讓我們拭目以待！</p>
+<p>接著我們將以相同的步驟來使用泛型來減少重複的程式碼。就像函式本體可以抽象出 <code>list</code> 而不用特定數值，泛型允許程式碼執行抽象型別。</p>
+<p>舉例來說，假設我們有兩個函式：一個會找出 <code>i32</code> 型別切片中的最大值而另一個會找出 <code>char</code> 型別切片的最大值。我們要如何刪除重複的部分呢？讓我們拭目以待！</p>
 <blockquote>
 <ul>
 <li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
