--- a/ch12-01-accepting-command-line-arguments.html
+++ b/ch12-01-accepting-command-line-arguments.html
@@ -182,7 +182,7 @@ $ cd minigrep
 </code></pre>
 <p>但現在由 <code>cargo new</code> 產生的程式還無法處理我們給予的引數。<a href="https://crates.io/">crates.io</a> 有些函式庫可以幫助程式接收命令列中的引數，但有鑑於你要學習此概念，讓我們親自來實作一個。</p>
 <h3><a class="header" href="#讀取引數數值" id="讀取引數數值">讀取引數數值</a></h3>
-<p>要讓 <code>minigrep</code> 能夠讀取我們傳入的命令列引數數值，我們需要使用 Rust 標準函式庫中提供的函式，也就是 <code>std::env::args</code>。此函式會回傳一個包含我們傳給 <code>minigrep</code> 的命令列引數的疊代器（iterator）。我們會在<a href="ch13-00-functional-features.html">第十三章</a><!-- ignore -->詳細解釋疊代器。現在你只需要知道疊代器的兩項重點：疊代器會產生一系列的數值，然後我們可以對疊代器呼叫 <code>collect</code> 方法來將其轉換成像是 像是向量的集合，來包含疊代器產生的所有元素。</p>
+<p>要讓 <code>minigrep</code> 能夠讀取我們傳入的命令列引數數值，我們需要使用 Rust 標準函式庫中提供的函式，也就是 <code>std::env::args</code>。此函式會回傳一個包含我們傳給 <code>minigrep</code> 的命令列引數的疊代器（iterator）。我們會在<a href="ch13-00-functional-features.html">第十三章</a><!-- ignore -->詳細解釋疊代器。現在你只需要知道疊代器的兩項重點：疊代器會產生一系列的數值，然後我們可以對疊代器呼叫 <code>collect</code> 方法來將其轉換成像是向量的集合，來包含疊代器產生的所有元素。</p>
 <p>使用範例 21-1 的程式碼能讓你的 <code>minigrep</code> 程式能夠讀取任何傳入的命令列引數，然後收集數值成一個向量。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">use std::env;
@@ -238,7 +238,7 @@ fn main() {
 搜尋 test
 目標檔案為 sample.txt
 </code></pre>
-<p>很好，程式能執行！我們想要的引數數值都有儲存至正確的變數中。之後我們會對特定潛在錯誤情形來加上一些錯誤處理，像是當使用者沒有提供引數的情況。現在我們先忽略這樣的情況，並開始加上讀取檔案的功能。</p>
+<p>很好，程式能執行！我們想要的引數數值都有儲存至正確的變數中。之後我們會對特定潛在錯誤的情形來加上一些錯誤處理，像是當使用者沒有提供引數的情況。現在我們先忽略這樣的情況，並開始加上讀取檔案的功能。</p>
 <blockquote>
 <ul>
 <li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
