--- a/print.html
+++ b/print.html
@@ -1420,7 +1420,7 @@ To learn more, run the command again with --verbose.
 </blockquote>
 <h2><a class="header" href="#資料型別" id="資料型別">資料型別</a></h2>
 <p>每個數值在 Rust 中都屬於某種<em>資料型別</em>，這告訴 Rust 何種資料被指定，好讓它能妥善處理資料。我們將討論兩種資料型別子集：純量（scalar）與複合（compound）。</p>
-<p>請記住 Rust 是一門<em>靜態型別</em>語言，這代表它必須在編譯時知道所有變數的型別。編譯器通常能依據數值與我們使用的方式推導出我們想使用的型別。但有時候如果多種型別都有可能時，像是第二章的<a href="ch02-00-guessing-game-tutorial.html#%E5%B0%87%E7%8C%9C%E6%B8%AC%E7%9A%84%E6%95%B8%E5%AD%97%E8%88%87%E7%A5%95%E5%AF%86%E6%95%B8%E5%AD%97%E5%81%9A%E6%AF%94%E8%BC%83">「將猜測的數字與祕密數字做比較」</a><!-- ignore -->用到的 <code>parse</code> 將 <code>String</code> 轉換成數字時，我們就需要像這樣加上型別詮釋： </p>
+<p>請記住 Rust 是一門<em>靜態型別</em>語言，這代表它必須在編譯時知道所有變數的型別。編譯器通常能依據數值與我們使用的方式推導出我們想使用的型別。但有時候如果多種型別都有可能時，像是第二章的<a href="ch02-00-guessing-game-tutorial.html#%E5%B0%87%E7%8C%9C%E6%B8%AC%E7%9A%84%E6%95%B8%E5%AD%97%E8%88%87%E7%A5%95%E5%AF%86%E6%95%B8%E5%AD%97%E5%81%9A%E6%AF%94%E8%BC%83">「將猜測的數字與祕密數字做比較」</a><!-- ignore -->用到的 <code>parse</code> 將 <code>String</code> 轉換成數字時，我們就需要像這樣加上型別詮釋：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -1472,7 +1472,7 @@ To learn more, run the command again with --verbose.
 <p>所以你該用哪些整數型別呢？如果你不確定的話，Rust 預設的型別通常就很好了，整數型別預設是 <code>i32</code>：此型別通常是最快的，甚至在 64 位元系統上也是。而你會用到 <code>isize</code> 或 <code>usize</code> 的主要時機是作為某些集合的索引。</p>
 <blockquote>
 <h5><a class="header" href="#整數溢位" id="整數溢位">整數溢位</a></h5>
-<p>假設你有個變數型別是 <code>u8</code> 可以儲存 0 到 255 的數值。如果你想要改變變數的值超出這個範圍的話，比方說像是 256，那麼就會發生<em>整數溢位</em>。Rust 有一些有趣的規則來處理這項行為。如果你是在除錯模式編譯的話，Rust 會包含整數溢位的檢查，造成你的程式在運行時<em>恐慌</em>（<em>panic</em>）。Rust 使用恐慌來表示程式因錯誤而結束，我們會在第九章的<a href="ch09-01-unrecoverable-errors-with-panic.html">「對無法復原的錯誤使用 <code>panic!</code>」</a><!-- ignore -->段落討論更多造成恐慌的細節。</p>
+<p>假設你有個變數型別是 <code>u8</code> 可以儲存 0 到 255 的數值。如果你想要改變變數的值超出這個範圍的話，比方說像是 256，那麼就會發生<em>整數溢位</em>。Rust 有一些有趣的規則來處理這項行為。如果你是在除錯模式編譯的話，Rust 會包含整數溢位的檢查，造成你的程式在執行時<em>恐慌</em>（<em>panic</em>）。Rust 使用恐慌來表示程式因錯誤而結束，我們會在第九章的<a href="ch09-01-unrecoverable-errors-with-panic.html">「對無法復原的錯誤使用 <code>panic!</code>」</a><!-- ignore -->段落討論更多造成恐慌的細節。</p>
 <p>當你是在發佈模式下用 <code>--release</code> 來編譯的話，Rust 則<em>不會</em>加上整數溢位的檢查而造成恐慌。相反地，如果發生整數溢位的話，Rust 會作出<em>二補數包裝</em>的動作。簡單來說，超出最大值的數值可以被<em>包裝</em>成該型別的最低數值。以 <code>u8</code> 為例的話，256 會變成 0、257 會變成 1，以此類推。程式不會恐慌，但是該變數可能會得到一個不是你原本預期的數值。通常依靠整數溢位的行為仍然會被視為邏輯錯誤，如果你想要安全顯式表達這種行為的話，你可以使用標準函式庫的型別 <a href="https://doc.rust-lang.org/std/num/struct.Wrapping.html"><code>Wrapping</code></a>。</p>
 </blockquote>
 <h4><a class="header" href="#浮點數型別" id="浮點數型別">浮點數型別</a></h4>
@@ -1518,7 +1518,7 @@ To learn more, run the command again with --verbose.
 </code></pre></pre>
 <p>布林值最常使用的方式之一是作為條件判斷，像是在 <code>if</code> 表達式中使用。我們將會在<a href="ch03-05-control-flow.html#control-flow">「控制流程」</a><!-- ignore -->段落介紹如何在 Rust 使用 <code>if</code> 表達式。</p>
 <h4><a class="header" href="#字元型別" id="字元型別">字元型別</a></h4>
-<p>目前我們只討論了數字，但是 Rust 一樣也有支援字母。Rust 的 <code>char</code> 型別是最基本的字母型別，以下程式碼顯示了使用它的方法。（請注意到 <code>char</code> 字面值是用單撇號賦值，宣告字串字面值時才是用雙撇號）</p>
+<p>目前我們只討論了數字，但是 Rust 一樣也有支援字母。Rust 的 <code>char</code> 型別是最基本的字母型別，以下程式碼顯示了使用它的方法。（請注意到 <code>char</code> 字面值是用單引號賦值，宣告字串字面值時才是用雙引號）</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let c = 'z';
@@ -5026,7 +5026,7 @@ To learn more, run the command again with --verbose.
 </ul>
 </blockquote>
 <h2><a class="header" href="#透過字串儲存-utf-8-編碼的文字" id="透過字串儲存-utf-8-編碼的文字">透過字串儲存 UTF-8 編碼的文字</a></h2>
-<p>我們已經在第四章提到字串（String），但現在我們要更加深入探討。Rustaceans 初心者常常會卡在三個環節：Rust 傾向於回報可能的錯誤、字串的資料結構比開發者所熟悉的還要複雜，以及 UTF-8。這些要素讓來自其他程式語言背景的開發者會遇到一些困難。</p>
+<p>我們已經在第四章提到字串（String），但現在我們要更加深入探討。Rustaceans 初學者常常會卡在三個環節：Rust 傾向於回報可能的錯誤、字串的資料結構比開發者所熟悉的還要複雜，以及 UTF-8。這些要素讓來自其他程式語言背景的開發者會遇到一些困難。</p>
 <p>我們會在集合章節討論字串的原因是，字串本身就是位元組的集合，且位元組作為文字呈現時，它會提供一些實用的方法。在此段落我們將和其他集合型別一樣討論 <code>String</code> 的操作，像是建立、更新與讀取。我們還會討論到 <code>String</code> 與其他集合不一樣的地方，像是 <code>String</code> 的索引就比其他集合還複雜，因為它會依據人們對於 <code>String</code> 資料型別的理解而有所不同。</p>
 <h3><a class="header" href="#什麼是字串" id="什麼是字串">什麼是字串？</a></h3>
 <p>首先我們要好好定義<em>字串（String）<em>這個術語。Rust 在核心語言中只有一個字串型別，那就是字串切片 <code>str</code>，它通常是以借用的形式存在 <code>&amp;str</code>。在第四章中我們提到</em>字串切片</em>是一個針對存在某處的  UTF-8 編碼資料的引用。舉例來說，字串字面值（String literals）就儲存在程式的二進制檔案中，因此就是字串切片。</p>
@@ -6084,8 +6084,8 @@ fn main() {
 <li>將重複的程式碼提取置函式本體內，並指定函式簽名輸入與回傳數值。</li>
 <li>更新重複使用程式碼的實例，改呼叫我們定義的函式。</li>
 </ol>
-<p>接我們將以相同的步驟來使用泛型來減少重複的程式碼。就像函式本體可以抽象出 <code>list</code> 而不用特定數值，泛型允許程式碼執行抽象型別。</p>
-<p>舉例來說，假數我們有兩個函式：一個會找出 <code>i32</code> 型別切片中的最大值而另一個會找出 <code>char</code> 型別切片的最大值。我們要如何刪除重複的部分呢？讓我們拭目以待！</p>
+<p>接著我們將以相同的步驟來使用泛型來減少重複的程式碼。就像函式本體可以抽象出 <code>list</code> 而不用特定數值，泛型允許程式碼執行抽象型別。</p>
+<p>舉例來說，假設我們有兩個函式：一個會找出 <code>i32</code> 型別切片中的最大值而另一個會找出 <code>char</code> 型別切片的最大值。我們要如何刪除重複的部分呢？讓我們拭目以待！</p>
 <blockquote>
 <ul>
 <li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
@@ -8639,7 +8639,7 @@ $ cd minigrep
 </code></pre>
 <p>但現在由 <code>cargo new</code> 產生的程式還無法處理我們給予的引數。<a href="https://crates.io/">crates.io</a> 有些函式庫可以幫助程式接收命令列中的引數，但有鑑於你要學習此概念，讓我們親自來實作一個。</p>
 <h3><a class="header" href="#讀取引數數值" id="讀取引數數值">讀取引數數值</a></h3>
-<p>要讓 <code>minigrep</code> 能夠讀取我們傳入的命令列引數數值，我們需要使用 Rust 標準函式庫中提供的函式，也就是 <code>std::env::args</code>。此函式會回傳一個包含我們傳給 <code>minigrep</code> 的命令列引數的疊代器（iterator）。我們會在<a href="ch13-00-functional-features.html">第十三章</a><!-- ignore -->詳細解釋疊代器。現在你只需要知道疊代器的兩項重點：疊代器會產生一系列的數值，然後我們可以對疊代器呼叫 <code>collect</code> 方法來將其轉換成像是 像是向量的集合，來包含疊代器產生的所有元素。</p>
+<p>要讓 <code>minigrep</code> 能夠讀取我們傳入的命令列引數數值，我們需要使用 Rust 標準函式庫中提供的函式，也就是 <code>std::env::args</code>。此函式會回傳一個包含我們傳給 <code>minigrep</code> 的命令列引數的疊代器（iterator）。我們會在<a href="ch13-00-functional-features.html">第十三章</a><!-- ignore -->詳細解釋疊代器。現在你只需要知道疊代器的兩項重點：疊代器會產生一系列的數值，然後我們可以對疊代器呼叫 <code>collect</code> 方法來將其轉換成像是向量的集合，來包含疊代器產生的所有元素。</p>
 <p>使用範例 21-1 的程式碼能讓你的 <code>minigrep</code> 程式能夠讀取任何傳入的命令列引數，然後收集數值成一個向量。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">use std::env;
@@ -8695,7 +8695,7 @@ fn main() {
 搜尋 test
 目標檔案為 sample.txt
 </code></pre>
-<p>很好，程式能執行！我們想要的引數數值都有儲存至正確的變數中。之後我們會對特定潛在錯誤情形來加上一些錯誤處理，像是當使用者沒有提供引數的情況。現在我們先忽略這樣的情況，並開始加上讀取檔案的功能。</p>
+<p>很好，程式能執行！我們想要的引數數值都有儲存至正確的變數中。之後我們會對特定潛在錯誤的情形來加上一些錯誤處理，像是當使用者沒有提供引數的情況。現在我們先忽略這樣的情況，並開始加上讀取檔案的功能。</p>
 <blockquote>
 <ul>
 <li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
