deploy: a11121481c9a8f9cd6fc1a24c47f150e8aa853b1

--- a/print.html
+++ b/print.html
@@ -2035,7 +2035,7 @@ To learn more, run the command again with --verbose.
     }
 }
 </code></pre>
-<p>當我們執行此程式時，我們會看到 <code>again!</code> 一直不停地重複顯示出來，直到我們手動停下程式為止。大多數的終端機都支援 <span class="keystroke">ctrl-c</span> 這個快捷鍵來中斷一支卡在無限迴圈的程式，你可以自己試試看：</p>
+<p>當我們執行此程式時，我們會看到 <code>再一次！</code> 一直不停地重複顯示出來，直到我們手動停下程式為止。大多數的終端機都支援 <span class="keystroke">ctrl-c</span> 這個快捷鍵來中斷一支卡在無限迴圈的程式，你可以自己試試看：</p>
 <!-- manual-regeneration
 cd listings/ch03-common-programming-concepts/no-listing-32-loop
 cargo run
